# Hotel-Booking-System

./: .env.example  .gitignore  CLAUDE.md  README.md  TestScenerio.md  demovideooutline.md
.github/workflows/: warmup.yml
docs/: ARCHITECTURE.md  DEPLOY.md  REVIEW_REPORT.md  SCHEDULING.md
docs/Plan/: PROJECT_PLAN.md  PROJECT_PLAN_TR.md
docs/screenshots/: README.md
frontend/: .env.example  .env.production.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infrastructure/: docker-compose.yml  render.yaml
scripts/: inspect_cache.py  promote_admin.py  requirements.txt  run_all_services.ps1  seed_demo_comments.py  seed_demo_data.py  smoke_test_gateway.py  verify_discount.py  verify_external_services.py
services/admin-service/: .env.example  Dockerfile  alembic.ini  requirements.txt
services/ai-agent-service/: .env.example  Dockerfile  requirements.txt
services/booking-service/: .env.example  Dockerfile  requirements.txt
services/comments-service/: .env.example  Dockerfile  (+1 more)
services/shared/: pyproject.toml
services/shared/shared/: __init__.py  config.py  logging.py
services/shared/shared/auth/: __init__.py  deps.py  firebase.py
services/shared/shared/clients/: __init__.py  mongo.py  postgres.py  rabbitmq.py  redis.py
services/shared/shared/models/: __init__.py  base.py  booking.py  hotel.py  room.py  room_availability.py  user.py
services/shared/shared/schemas/: __init__.py  booking.py  comment.py  common.py  hotel.py  room.py  user.py
(+101 files in other folders)
