[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for the Hotel Booking microservices (config, logging, clients, schemas, auth)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
]

[project.optional-dependencies]
postgres = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.30", "alembic>=1.13"]
mongo = ["motor>=3.6"]
redis = ["redis>=5.2"]
rabbitmq = ["aio-pika>=9.5"]
firebase = ["firebase-admin>=6.6"]
all = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "motor>=3.6",
    "redis>=5.2",
    "aio-pika>=9.5",
    "firebase-admin>=6.6",
]

[tool.setuptools.packages.find]
include = ["shared*"]
